fix: remove highlight color on mobile chrome; use scale animation instead of transitions

--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,10 @@ body::-webkit-scrollbar-thumb {
 		/* NOTE: breaks tailwind's transform utility */
 		transform: rotateX(180deg);
 	}
+
+	.no-tap-highlight {
+		-webkit-tap-highlight-color: transparent;
+	}
 }
 
 @keyframes shake {
